--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,21 +3,18 @@ version: '3'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/app
+    command: gunicorn fridge_tracker.wsgi:application --bind 0.0.0.0:8000
     ports:
-      - '8000:8000'
+      - '80:8000'
     environment:
-      - DEBUG=1
-      - SECRET_KEY=foo
-      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
       - SQL_ENGINE=django.db.backends.postgresql
       - SQL_DATABASE=django_dev
       - SQL_USER=django
       - SQL_PASSWORD=django
       - SQL_HOST=db
       - SQL_PORT=5432
+    env_file:
+      - ./.env.prod
     depends_on:
       - db
   db:
